--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  min-width: 1000px;
   padding: 0;
   margin: 0;
   font: 14px Interstate,Lucida Grande,Arial,sans-serif;
@@ -12,4 +13,6 @@ a {
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
